# remoteness_map

./: .gitignore  README.md
RemotenessMap/: main.py
code/euclidean_distance_transform/: euclidean_distance_transform.sln
code/euclidean_distance_transform/App/: App.vcxproj  Program.cpp
code/euclidean_distance_transform/Core/: CV2EuclideanDistanceTransformStrategy.hpp  Core.vcxproj  (+3 more)
code/euclidean_distance_transform_crossplatform/: CMakeLists.txt
code/euclidean_distance_transform_crossplatform/app/: App.cpp  CMakeLists.txt  euclidean_distance_transform_app.cpp  euclidean_distance_transform_app.h
code/euclidean_distance_transform_crossplatform/core/: CMakeLists.txt
code/euclidean_distance_transform_crossplatform/core/include/: CV2EuclideanDistanceTransformStrategy.h  DistanceTransformContext.h  some.h
code/euclidean_distance_transform_crossplatform/core/src/: CV2EuclideanDistanceTransformStrategy.cpp  DistanceTransformContext.cpp  some.cpp  things.h
code/euclidean_distance_transform_crossplatform/euclidean_distance_transform_app/: CMakeLists.txt  euclidean_distance_transform_app.cpp  euclidean_distance_transform_app.h
code/open_elevation_api/: open_elevation_api_height_map.py  open_elevation_api_test.py  open_elevation_api_test_multiple.py
code/projection/: projection.py  projection_multithreading.py  projection_multithreading_2.py
code/remoteness_map_python/: map.py  map_layer.py  projection_multithreading_2.py
data/: highway_data.json  test.json
data/map_types/: map_types.json
data/openstreetmap/: all.json  city_streets.json  foot_paths.json  forest_roads.json  interurban_roads.json
data/overpass_querys/: query_dictionary.json
doc/: coordinate-systems.docx  open-elevation-api.docx  overpass-api.docx  overpass_querys.txt
doc/daily_progress/: 23-05-2024_report.docx  24-05-2024_report_cmake.docx  25-05-2024_report.docx  25-05-2024_report_cmake_vcpkg_linking.docx  26-05-2024_report.docx  27-05-2024_report_cmake_testing.docx
old_python_code/src/: map_info.py  map_manager.py  overpass_api_client.py  overpass_source_implementation.py
old_src/: data_manager.py  main.py
old_src/test/: elevation_data.json  elevation_query_test.py
src/: data_manager.py  euclidean_distance_transform.py  file_manager.py  main.py  map.py  map_manager.py  map_source.py  map_source_implementation.py  overpass_source_implementation.py  query_manager.py  remoteness_map.py
src/test/: elevation_grid_test.py  euclidean_distance_transform.py  overpass_data.json  test.py  way_query_test.py
(+7 files in other folders)
